# cql

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.node-runtime.yml  docker-compose.yml  goal.yaml  index.html  local.dev.txt  nginx.conf  nginx.conf.template  package-lock.json  package.json  project.sh  tree.sh  vite.config.js
.legacy/: README.md  TODO.md
.legacy/components/: dsl-contract.ts  dsl-func.parser.ts  dsl-registry.execution.ts  dsl-registry.parsing.ts  dsl-registry.ts  dsl-timer.service.ts  dsl.engine.ts  dsl.highlight.legacy.ts  dsl.migrate.xml.ts  dsl.quotes.ts  dsl.runtime.helpers.test.ts  dsl.runtime.ts  dsl.schema.test.ts  dsl.schema.ts  dsl.types.ts  dsl.xsd.ts
.legacy/dsl/: index.html  package.json  tsconfig.json  vite.config.ts
.legacy/dsl-examples/: dsl-editor-placeholder.cql  func-editor-placeholder.cql  func-editor-syntax-example.cql  func-editor-template.cql  func-editor-usage-example.cql  manifest.json  scenario-editor-default.cql  scenario-editor-placeholder.cql
.legacy/pages/: connect-scenario-dsl-editor.page.ts  connect-scenario-func-editor.page.ts  connect-scenario-library-editor.page.ts  connect-scenario-map-editor.page.ts  connect-scenario-scenario-editor.page.ts  connect-scenario-scenarios.page.ts  connect-test-connect-xml.page.ts  connect-test-protocol-protocol-steps.page.ts
.legacy/tests/: dsl-content-helpers.test.ts  (+3 more)
backend/: Dockerfile  README.md  TODO-ENGINE-PARITY.md  local.dev.txt  pyproject.toml
backend/cql_backend/: __init__.py  __main__.py  app.py  content_helpers.py  exec_runtime.py  highlight.py  migrate_xml.py  parser.py  quotes.py  scenario_builders.py  schema.py  serializer.py  types.py  validate_db.py  validator.py  xml_codec.py  xsd.py
backend/cql_backend/clients/: __init__.py  maskservice_client.py
backend/tests/: test_api.py  test_bridge.py  test_exec.py  test_parser.py  test_quotes.py  test_scenario_builders.py  test_serializer.py  test_validator.py
project/: README.md  analysis.toon.yaml  calls.mmd  calls.toon.yaml  calls.yaml  compact_flow.mmd  context.md  duplication.toon.yaml  evolution.toon.yaml  flow.mmd  index.html  map.toon.yaml  mermaid.export  project.toon.yaml  prompt.txt
runtime/: dsl-dialog.ts  dsl-execution.handlers.ts  dsl-registry.commands.ts  dsl-tools.ts  dsl.examples.ts  dsl.exec.test.ts  dsl.exec.ts  dsl.highlight.ts  dsl.mapping.test.ts  dsl.mapping.ts  dsl.migrate.xml.db.test.ts  dsl.parser.motor.test.ts  dsl.parser.ts  dsl.quote-utils.ts  dsl.runtime.helpers.ts  dsl.serialize.text.ts  dsl.validate.db.test.ts
scripts/: sync-oqlts-vendor.sh
src/: App.jsx  main.jsx
test/: oqlos-cql.test.js
(+213 files in other folders)
