[project]
name = "oqlos-cql-backend"
version = "0.1.0"
description = "CQL runtime as a decoupled FastAPI service. Replaces direct imports from maskservice frontend's components/dsl/ by exposing /api/cql/* HTTP endpoints."
requires-python = ">=3.11"
authors = [{ name = "OqlOS", email = "dev@oqlos.com" }]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.6.0",
    "httpx>=0.27",
    "jsonschema>=4.21",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.6",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["cql_backend*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
